# lua-bridge-tracer

./: CMakeLists.txt  README.md
.circleci/: config.yml
ci/: Dockerfile  do_ci.sh  install_lua.sh  install_opentracing.sh  setup_build_environment.sh
example/hello_server/jaeger/: Dockerfile  docker-compose.yaml  jaeger-config.json
example/tutorial/: tutorial.lua
src/: carrier.cpp  carrier.h  dynamic_tracer.cpp  dynamic_tracer.h  lua_class_description.h  lua_span.cpp  lua_span.h  lua_span_context.cpp  lua_span_context.h  lua_tracer.cpp  lua_tracer.h  module.cpp  utility.cpp  utility.h
test/: basic.lua  tracer.lua
